Upload Archivos con guardado local

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
     "Conn": "Server=DESKTOP-P41SRTN; Database=ManejoTareas; Trusted_Connection=True ; TrustServerCertificate=True;"
+    "AzureStorage": "ConnectionString de Azure Access Keys"
   },
   "Logging": {
     "LogLevel": {
